--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "laravelcollective/html": "^6.2",
-        "maatwebsite/excel": "^3.1"
+        "laraveldaily/laravel-invoices": "^3.0",
+        "luecano/numero-a-letras": "^3.0",
+        "maatwebsite/excel": "^3.1",
+        "nesbot/carbon": "^2.62"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
